# pong-game

./: Cargo.toml
assets/texture/: pong_spritesheet.ron
config/: bindings.ron  display.ron
src/: audio.rs  constants.rs  main.rs  state.rs  ui.rs
src/components/: ball.rs  mod.rs  paddle.rs
src/systems/: bounce.rs  mod.rs  move_balls.rs  paddle.rs  winner.rs
