[package]
name = "pong-game"
version = "0.1.0"
authors = ["Milan Jaric <milan.jaric@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amethyst = {version = "0.15.3", features = ["no-slow-safety-checks"]}
log = { version = "0.4.11", features = ["serde"] }
serde = { version = "1.0" }

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
